--- a/src/main/resources/templates/Akmal.html
+++ b/src/main/resources/templates/Akmal.html
@@ -9,15 +9,24 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-    <body>
-        <div>Struk Pembelian</div>
-        <hr>
-        <p>Nama Buah        : <b th:text="${name}"></b>
-        <p>Harga Perkilo    : Rp.<b th:text="${price}"></b>
-        <p>Jumlah Kilo      : <b th:text="${kilo}"></b>
-        <p>Harga Awal       : Rp.<b th:text="${total10}"></b>
-        <p>Jumlah Diskon (%) : <b th:text="${disc}"></b>
-        <p>Total Harga Diskon   : <b th:text="${discountrp}"></b>
-        <p>Total Bayar      : Rp.<b th:text="${tbayar}"></b>
-    </body>
+    <table border="2">
+        <tr>
+            <th>Nama Buah</th>
+            <th>Harga Perkilo</th>
+            <th>Jumlah Kilo</th>
+            <th>Harga Awal</th>
+            <th>Jumlah Diskon</th>
+            <th>Total Harga Diskon</th>
+            <th>Total Bayar</th>
+        </tr>
+            <td th:text="${name}"></td>
+            <td th:text="${price}"></td>
+            <td th:text="${kilo}"></td>
+            <td th:text="${total10}"></td>
+            <td th:text="${disc}"></td>
+            <td th:text="${hargadisc}"></td>
+            <td th:text="${tbayar}"></td>
+        </tr>
+
+    </table>
 </html>
