--- a/src/main/resources/templates/Akmal.html
+++ b/src/main/resources/templates/Akmal.html
@@ -18,6 +18,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <th>Jumlah Diskon</th>
             <th>Total Harga Diskon</th>
             <th>Total Bayar</th>
+            <th>Uang Customer</th>
+            <th>Uang Kembalian</th>
         </tr>
             <td th:text="${name}"></td>
             <td th:text="${price}"></td>
@@ -26,6 +28,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <td th:text="${disc}"></td>
             <td th:text="${hargadisc}"></td>
             <td th:text="${tbayar}"></td>
+            <td th:text="${uang}"></td>
+            <td th:text="${kembalian}"></td>
         </tr>
 
     </table>
